client/styles.scss
@use 'styles/responsive';
@use '@ecodev/natural';
@use '@ecodev/natural-layout' as nat;
@use '@angular/material' as mat;

html {
    @include mat.theme(
        (
            color: (),
            typography: Roboto,
            density: 0,
        )
    );
}

.container {
    box-sizing: border-box;
    margin-right: auto !important;
    margin-left: auto !important;
    padding-right: 20px;
    padding-left: 20px;
    max-width: 1130px;

    .page-body {
        max-width: 800px;
    }
}

#front-office-body > router-outlet + * {
    display: block;
    margin-top: 60px;
}

/* Disable login autofill background color */
input:-webkit-autofill,
textarea:-webkit-autofill,
select:-webkit-autofill {
    transition-delay: 3600s;
}

a {
    color: inherit;
    text-decoration: none;
}

a.mat-ripple {
    display: inline-block;
}

.detail-body {
    margin: auto;
    max-width: 1300px;
}

.detail-speed-dial {
    position: fixed;
    right: 20px;
    bottom: 20px;
    z-index: 999; // < than 1000 that is the z-index of overlay contents
}

mat-form-field.no-bottom-spacing {
    margin-bottom: -1.34375em;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.mat-mdc-snack-bar-container {
    margin-top: 88px !important;
}

.line-break {
    white-space: pre-wrap;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    /* display: none; <- Crashes Chrome on hover */
    -webkit-appearance: none;
    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

input[type='number'] {
    -moz-appearance: textfield; /* Firefox */
}

.natural-table {
    display: table;

    & > div {
        display: table-row;

        & > div {
            display: table-cell;
            padding: 3px;
        }
    }
}

.relative {
    position: relative;

    // Centers
    .absolute {
        position: absolute !important;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
}

[matRipple] {
    cursor: pointer;
}

// Keep the mat-checkbox's checkbox near the first line, see https://github.com/angular/components/issues/8416
// This is not perfectly aligned on the text first line, because we need space for the ripple, but at least the
// spacing stays consistent with other one-line <mat-checkbox>, and it should be good enough for most use-cases
.mdc-checkbox {
    align-self: flex-start;
}

.app-date-column {
    width: 14em;
}

.page-illustration {
    display: none;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 500px;

    @media (min-width: 600px) {
        display: block;
    }
}

.page-illustration-content {
    top: 0;
    & > img {
        margin-bottom: 0;
    }
}

@include nat.media(sm) {
    .page-illustration-content {
        position: relative;
        top: -350px;
        width: 100%;
        text-align: left;

        & > img {
            margin-bottom: -300px;
            max-width: 100%;
        }
    }
}
// It is possible that the server returns error message on multiple line (eg: when ACL with multiple assertions fail),
// so we try to preserve that formatting, while still wrapping if necessary
.mat-mdc-snack-bar-label {
    white-space: pre-wrap;
}

@include nat.media(md) {
    .app-md-expand-70 {
        flex: 1 1 1e-9px;
        max-width: 70%;
    }
    .app-md-expand-30 {
        flex: 1 1 1e-9px;
        max-width: 30%;
    }
    .app-md-gap-60 {
        gap: 60px;
    }
    .app-md-gap-50 {
        gap: 50px;
    }
}

.app-expand-30 {
    flex: 1 1 1e-9px;
    max-width: 30%;
}

.app-gap-50 {
    gap: 50px;
}

.app-gap-60 {
    gap: 60px;
}

[class*='-horizontal'][class*='-gap-'] > * {
    margin-right: 0 !important;
}

[class*='-vertical'][class*='-gap-'] > * {
    margin-bottom: 0 !important;
}

ng-progress {
    .ng-bar {
        box-shadow: var(--mat-sys-tertiary-container) 0 0 5px !important;
        background-color: var(--mat-sys-tertiary-container) !important;
        height: 3px !important;
    }

    .ng-meteor {
        top: 0 !important;
        transform: none !important;
        opacity: 1 !important;
        box-shadow: var(--mat-sys-tertiary-container) 0 0 20px !important;
        width: 25px !important;
    }
}

.pageHeader {
    padding-top: 20px;

    .pageTitle {
        position: relative;
        min-width: 300px;

        & > span {
            position: absolute;
            top: -1.7em;
            left: 0;
            color: var(--mat-sys-primary-container);
            font-size: 0.6em;
        }
    }
}

app-admin router-outlet + * {
    padding-bottom: 100px;
}

.text-bold {
    font-weight: bold !important;
}

.text-thin {
    font-weight: 100 !important;
}

.frame-green {
    background: #00ae8c;
    color: white;
}

.frame-stroked-primary {
    border: 1px solid var(--mat-sys-primary-container);
}

.frame-stroked-accent {
    border: 1px solid var(--mat-sys-tertiary-container);
}

.frame-stroked-warn {
    border: 1px solid var(--mat-sys-error-container);
}

.frame-padding {
    padding: 30px;
}

.text-light {
    color: color-mix(in srgb, var(--mat-sys-on-surface) 50%, transparent);
}

a {
    color: var(--mat-sys-primary-container);
}

[matButton='filled'][color='tertiary'] {
    @include mat.button-overrides(
        (
            filled-container-shape: 0,
            filled-container-color: var(--mat-sys-tertiary-container),
        )
    );
}

.rich-text {
    line-height: 1.6em;

    .strong {
        font-weight: bold;
    }

    ul {
        position: relative;
        list-style: none;

        li {
            margin-left: 0;

            &::before {
                position: absolute;
                left: 0;
                content: '➔';
            }
        }
    }

    h1,
    h2,
    h3 {
        margin-top: 1.3em;
    }

    img {
        margin: 1em 0;
        max-width: 100%;
    }

    .image-before-title {
        position: relative;
        top: 2.5em;
    }
}

app-home-block,
app-subscriptions,
.nat-frame-primary,
.nat-frame-tertiary,
.frame-green,
.support-column {
    .mdc-button {
        @include mat.button-overrides(
            (
                filled-container-color: white,
                filled-label-text-color: black,
                text-label-text-color: black,
            )
        );
    }
}

.rich-text a,
a.app-link {
    &:not(.mat-mdc-button-base):not(.no-style) {
        border-bottom-width: 2px;
        border-bottom-style: solid;
        border-color: var(--mat-sys-primary);
        color: var(--mat-sys-primary);
        text-decoration: none;

        &:hover {
            border-color: var(--mat-sys-tertiary-container);
            color: var(--mat-sys-tertiary-container);
        }
    }
}

.rich-text {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p {
        margin-bottom: 1em;
    }
}

.witnesses {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-gap: 20px;

    @media screen and (max-width: 700px) {
        grid-template-columns: 100%;
    }
}

.witness {
    display: inline-block; // prevents columns to break paragraph (from bottom to top of next column)
    margin-bottom: 30px;
    border-width: 0;
    border-left-width: 5px;
    border-style: solid;
    border-color: var(--mat-sys-primary-container);
    padding: 0 0 0 10px;
}

